<resources>
    <string name="app_name">Up-2-Date</string>
    <string name="START">start</string>
    <string name="CLOSE">close</string>
    <string name="open_drawer">open it</string>
    <string name="close_drawer">close it</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="business">Business</string>
    <string name="business_image">Business Image</string>
    <string name="sports_image">Sports Image</string>
    <string name="sports">Sports</string>
    <string name="tech_image">Tech Image</string>
    <string name="technology">Technology</string>
    <string name="entertainment">Entertainment</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="health">Health</string>
    <string name="health_image">Health Image</string>
    <string name="lifestyle_image">Lifestyle Image</string>
    <string name="entertainment_image">Entertainment Image</string>
    <string name="header_image">Header Image</string>
    <string name="indicate_the_page_number">Indicate the page number.</string>
    <string name="skip">Skip</string>
    <string name="up_2_date">Up-2-Date</string>
    <string name="displays_2nd_page">Displays 2nd page</string>
    <string name="displays_3rd_page">Displays 3rd page</string>
    <string name="next_button">Next Button</string>
    <string name="get_image_from_url">Get image from url</string>
    <string name="set_black_tint_on_the_image">set black tint on the image</string>
    <string name="author">author</string>
    <string name="headline">Headline</string>
    <string name="content">content</string>
    <string name="rate_us">Rate us</string>
    <string name="submit">Submit</string>
    <string name="background_image_of_splash_screen">background image of splash screen</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="search">Search</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown">Unknown</string>

</resources>